# TeeBenchWeb

./: .env.example  .gitignore  Cargo.toml  Readme.md  example_operator.cpp  run.sh
backend/: Cargo.toml  output.csv  teebenchargs.csv
backend/src/: fake_teebench.rs  main.rs
backend/src/lib/: caching.rs  config.rs  findings.rs  lib.rs
cached/: job_results.json  output.csv  report_hjv2.json  report_hjv3.json  report_hjv4.json  report_hjv5.json  teebenchargs.csv  temp_report_0b430e47-e132-4102-9899-a681354ffe2f.json  temp_report_0e1ffac9-734a-4d7b-ab9f-6a1b4cf81f40.json  temp_report_1ecda530-9354-41c9-8102-9fd56ca1c500.json  temp_report_2a677b07-e20b-477b-b17e-a5908f78f6b5.json  temp_report_7a7ea42e-5150-4db0-8f62-ac013e0ec649.json  temp_report_84a80dd3-a20e-4cc1-9ec0-932e6c0cd5b0.json  temp_report_ba3a447c-daf3-4165-b177-e4aa7158ce5a.json
common/: Cargo.toml
common/code_files/: OperatorJoin_HashJoinVersion1.cpp  OperatorJoin_HashJoinVersion1_Compiler_Output.txt  OperatorJoin_HashJoinVersion2.cpp  OperatorJoin_HashJoinVersion2_Compiler_Output.txt  OperatorJoin_HashJoinVersion3.cpp  OperatorJoin_HashJoinVersion3_Compiler_Output.txt  OperatorJoin_HashJoinVersion4.cpp  OperatorJoin_HashJoinVersion4_Compiler_Output.txt  OperatorJoin_HashJoinVersion5.cpp  OperatorJoin_HashJoinVersion5_Compiler_Output.txt  OperatorJoin_HashJoinVersion6_Compiler_Output.txt
common/src/: commandline.rs  commit.rs  data_types.rs  hardcoded.rs  lib.rs
frontend/: Cargo.toml  index.html
frontend/.cargo/: config.toml
frontend/src/: chart.rs  chartjs.rs  commits.rs  data_structures.rs  job_results_view.rs  js_bindings.rs  main.rs  modal.rs  navigation.rs  perf_report.rs  profiling.rs  queue.rs
frontend/src/components/: bs_popover.rs  checkbox.rs  collapse.rs  finding.rs  mod.rs  number.rs  radio.rs  select.rs  tag.rs  websocket.rs
src/: commits.rs  data_structures.rs  main.rs  navigation.rs  profiling.rs
