[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.5", features = ["ws"] }
axum-extra = { version = "0.3", features = ["spa"] }
chrono = { version = "0.4", features = ["serde"] } # For Datetime in Commit
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-macros = "0.2"
