[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path="../common" }

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["ws", "macros"] }
axum-extra = { version = "0.4", features = ["spa"] }
time = { version = "0.3", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-macros = "0.3"
