[package]
name = "backend"
version = "0.1.0"
edition = "2021"
default-run = "backend"

[lib]
name = "backend_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "fake_teebench"
path = "src/fake_teebench.rs"


[dependencies]
common = { path="../common" }

tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6", features = ["ws", "macros"] }
axum-extra = { version = "0.4", features = ["spa"] }
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum-macros = "0.3"
csv = "1.2"

# only fake_teebench (for now)
anyhow = "1"
structopt = { version = "0.3", default-features = false }
indoc = "1.0"
once_cell = "1.17"
