[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yewdux = { git = "https://github.com/nmlt/yewdux.git", branch = "patch-1" } # For `Store` trait for ProfilingConfiguration
strum = "0.24"
strum_macros = "0.24"
indoc = "1.0"
thiserror = "1.0"
structopt = { version = "0.3", default-features = false }
uuid = { version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
