[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path="../common" }

yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewdux = { git = "https://github.com/nmlt/yewdux.git", branch = "patch-1" }
yewdux-input = { git = "https://github.com/nmlt/yewdux.git", branch = "patch-1" }
serde = "1"
serde_json = "1"
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
futures = "0.3"
gloo-console = "0.2.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlSelectElement", "HtmlInputElement"]
